--- a/src/Home.css
+++ b/src/Home.css
@@ -12,3 +12,8 @@
 	font-size: 18px;
 	text-align: center;
 }
+
+@font-face {
+	font-family: "Joker";
+	src: url("./Gothic-Joker.ttf") format("truetype");
+}
