--- a/src/Home.css
+++ b/src/Home.css
@@ -15,5 +15,10 @@
 
 @font-face {
 	font-family: "Joker";
-	src: url("./Gothic-Joker.ttf") format("truetype");
+	src: url("./fonts/Gothic-Joker.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: "Adam";
+	src: url("./fonts/ADAM.CG PRO.otf") format("opentype");
 }
